Change up our concept for capabilities so we're more report-focused for the moment